# akita

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.lock.txt
.github/workflows/: publish.yml  tests.yml
akita/: __init__.py  embedder.py  memory.py  planner.py  runtime.py
demos/: demo1_private_search.py  demo2_encrypted_scoring.py  demo3_exact_rules.py  demo6_private_memory.py
demos/demo_page/: app.py  index.html
demos/private_rag/: build_index.py  client.py  scale_test.py  server.py
docs/: index.html  why.md
results/: demo1_private_search.json  demo2_encrypted_scoring.json  demo3_exact_rules.json  demo4_private_rag.json  demo5_scale_test.json  demo6_private_memory.json
tests/: test_memory.py  test_memory_plan.py  test_planner.py
